rop-frontend.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: rop-frontend
    namespace: rop
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: rop-frontend
    template:
      metadata:
        labels:
          app: rop-frontend
      spec:
        imagePullSecrets:
          - name: ghcr-secret 
        containers:
          - name: rop-frontend
            image: ghcr.io/rop-team/rop-frontend:latest #
            ports:
              - containerPort: 3000
  ---
  apiVersion: v1
  kind: Service
  metadata:
    name: rop-frontend-service
    namespace: rop
  spec:
    selector:
      app: rop-frontend
    ports:
      - protocol: TCP
        port: 80       
        targetPort: 3000
