rop-osrm-thailand.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rop-osrm-thailand
  namespace: rop 
  labels:
    app: rop-osrm-thailand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rop-osrm-thailand
  template:
    metadata:
      labels:
        app: rop-osrm-thailand
    spec:
      imagePullSecrets:
      - name: ghcr-secret 
      containers:
      - name: rop-osrm-thailand
        image: ghcr.io/rop-team/osrm-thailand:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http-osrm
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "500m"
          limits:
            memory: "2.5Gi"
            cpu: "2"
---
apiVersion: v1
kind: Service
metadata:
  name: rop-osrm-thailand-service
  namespace: rop
spec:
  type: ClusterIP 
  selector:
    app: rop-osrm-thailand
  ports:
  - protocol: TCP
    port: 80         
    targetPort: 5000
