rop-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rop-frontend-ingress
  namespace: rop
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel-rop
spec:
  rules:
  - host: soroutetion.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rop-frontend-service
            port:
              number: 80
